fixed alignment and spacing for mobile views

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a.body-link:hover{
 	font-size: 0.8em;
 	line-height: 16px;
 	opacity: 70%;
-	min-width: 300px;
+	min-width: 268px;
 }
 
 .title{
@@ -77,14 +77,14 @@ a.body-link:hover{
 	font-size: 3em;
 	font-weight: bolder;
 	padding: 16px 0;
-	min-width: 300px;
+	min-width: 268px;
 }
 
 .body-copy{
 	padding: 48px 0;
 	line-height: 24px;
 	width: 40%;
-	min-width: 300px;
+	min-width: 268px;
 }
 
 .subtext{
@@ -92,26 +92,28 @@ a.body-link:hover{
 	font-size: 0.8em;
 	line-height: 16px;
 	width: 40%;
-	min-width: 300px;
+	min-width: 268px;
 }
 
 .disclaimer{
-	padding: 16px 0;
+	padding-top: 16px;
+	padding-bottom: 48px;
 	font-size: 0.8em;
 	line-height: 16px;
 	width: 40%;
-	min-width: 300px;
+	min-width: 268px;
 }
 
 .copyright{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	margin:auto;
 	width:100%;
 	padding-top: 48px;
 	padding-bottom: 300px;
 	font-size: 0.8em;
 	line-height: 16px;
-	width: 40%;
-	min-width: 300px;
 }
 
 /*----------------------HELLO-------------------------*/
@@ -119,7 +121,7 @@ a.body-link:hover{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .hello-title{
@@ -128,7 +130,7 @@ a.body-link:hover{
 	font-size: 3em;
 	font-weight: bolder;
 	padding-bottom: 48px;
-	min-width: 300px;
+	min-width: 268px;
 }
 
 /*----------------------tl;dr-------------------------*/
@@ -137,7 +139,7 @@ a.body-link:hover{
 	flex-direction: column;
 	align-items: center;
 	margin:auto;
-	height: 100vh;
+	min-height: 100vh;
 	width:100%;
 }
 
@@ -147,34 +149,38 @@ a.body-link:hover{
 	font-size: 3em;
 	font-weight: bolder;
 	padding-bottom: 48px;
-	min-width: 300px;
+	min-width: 268px;
 }
 
 /*---------------------IMAGE STYLING-------------------------*/
 .dx-img{
-	width:360px;
-	height:420px;
+	max-width: 320px;
+	width: 100%;
+	height: auto;
 	padding-top:50px;
-	padding-bottom:50px;">
+	padding-bottom:50px;
 }
 
 .aviation-img{
-	width:284px;
-	height:360px;
+	max-width: 320px;
+	width: 100%;
+	height: auto;
 	padding-top:50px;
 	padding-bottom:50px;
 }
 
 .dataviz-img{
-	width:284px;
-	height:360px;
+	max-width: 320px;
+	width: 100%;
+	height: auto;
 	padding-top:50px;
 	padding-bottom:50px;
 }
 
 .vision-science-img{
-	width:284px;
-	height:180px;
+	max-width: 320px;
+	width: 100%;
+	height: auto;
 	padding-top:80px;
 	padding-bottom:80px;
 }
@@ -221,34 +227,34 @@ a.body-link:hover{
 	height: 10px;
 }
 
-/* media queries */
+/*----------------------------------MEDIA QUERIES-----------------------------------*/
 /* Phones: Portrait and Landscape */
 @media (max-width: 767px) {
-		.bottom-nav{
-			width: 100%;
-			padding: 10px 0;
+		.social-nav{
+			width: 100vw;
+			height: 48px;
 			padding-right: 24px;
 		}
+
 		a:link{
 			font-weight: bolder;
 			color: #142D3D;
 			text-decoration: none;
 			background-color: #F1F080;
 			}
+
 		a.social{
 				background-color: #142D3D;
 			}
+
 		.nav{
 			visibility: hidden;
 		}
 }
 
-/* Tablets: Portrait*/
-@media only screen
-  and (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (orientation: portrait)
-  and (-webkit-min-device-pixel-ratio: 1) {
+/* Tablets*/
+@media (min-device-width: 768px)
+  and (max-device-width: 1024px){
 		.content{
 			width: 100%;
 		}
@@ -257,17 +263,7 @@ a.body-link:hover{
 			padding-right: 24px;
 		}
 		a:link{
-			font-weight: bolder;
-			color: #142D3D;
-			text-decoration: none;
-			}
-		a.social{
-				background-color: #142D3D;
-			}
-		a.nav-link{
-			font-weight: bolder;
-			color: #142D3D;
-			text-decoration: none;
 			background-color: #F1F080;
-		}
+			}
+		a:social{}
 }
